--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": ">=5.6.4",
         "laravel/framework": "5.4.*",
         "laravelcollective/html": "^5.4",
+        "nwidart/laravel-modules": "^1.16",
         "spatie/laravel-permission": "^1.7"
     },
     "require-dev": {
@@ -22,7 +23,8 @@
             "database"
         ],
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Modules\\": "Modules/"
         }
     },
     "autoload-dev": {
